Implemented a dialog box for editing a todo

--- a/WPFTodoList/WPFTodoList.csproj
+++ b/WPFTodoList/WPFTodoList.csproj
@@ -76,8 +76,12 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Dialogs\ViewModels\AddTodoDialogViewModel.cs" />
+    <Compile Include="Dialogs\ViewModels\EditTodoDialogViewModel.cs" />
     <Compile Include="Dialogs\Views\AddTodoDialog.xaml.cs">
       <DependentUpon>AddTodoDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Dialogs\Views\EditTodoDialog.xaml.cs">
+      <DependentUpon>EditTodoDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainModule.cs" />
     <Compile Include="Models\NavigationItem.cs" />
@@ -132,6 +136,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Dialogs\Views\AddTodoDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dialogs\Views\EditTodoDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
