--- a/WPFTodoList/packages.config
+++ b/WPFTodoList/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DryIoc.dll" version="4.7.7" targetFramework="net472" />
+  <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net472" />
   <package id="Prism.Core" version="8.1.97" targetFramework="net472" />
   <package id="Prism.DryIoc" version="8.1.97" targetFramework="net472" />
